--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.6.6
   equatable: ^2.0.5
   go_router: ^14.0.1
+  pretty_dio_logger: ^1.3.1
+  cached_network_image: ^3.3.1
+
 
 
 
