--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.6
   equatable: ^2.0.5
   go_router: ^14.0.1
-  pretty_dio_logger: ^1.3.1
+  flutter_pretty_dio_logger: ^3.0.0
   cached_network_image: ^3.3.1
 
 
@@ -66,6 +66,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/language/en.json
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
