--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
+# A version number is three numbers separated by dots, like 1.2.43.
 # followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
@@ -40,6 +40,9 @@ dependencies:
   go_router: ^14.0.1
   flutter_pretty_dio_logger: ^3.0.0
   cached_network_image: ^3.3.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 
 
@@ -52,6 +55,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8
+  hive_generator: ^2.0.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
